# AsdSte100Issue9TrainingData

./: .flake8  .pre-commit-config.yaml  Makefile  NOTICE  README.md  main.py  pyproject.toml  task01.jsonl  task1.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
doc/: training_data.ipynb
scripts/: ci-local.ps1  ci-local.sh  install-hooks.ps1  install-hooks.sh
scripts/hooks/: pre-push
src/: logging.conf  main.py
src/biz/: __main__.py
src/biz/dfch/diagnostics/: __init__.py  clock.py  stopwatch.py
src/biz/dfch/i18n/: __init__.py  i18n.py  language_code.py
src/biz/dfch/logging/: __init__.py  log.py
src/biz/dfch/text/: __init__.py  string_builder.py
src/biz/dfch/training_data/: __init__.py  __main__.py  cli.py  info.py  llm_client.py  ste100approved.py
src/biz/dfch/training_data/agents/: __init__.py  lite_llm_agent.py  ste100_agent.py
src/biz/dfch/training_data/commands/: __init__.py  ambiguity.py  args.py  category.py  choice.py  compliance.py  grammar.py  lexicon.py  paragraph.py  pos.py  query.py  restriction.py  rewrite.py  verb.py
src/biz/dfch/training_data/tools/: __init__.py  word_tools.py
tests/: test_copyright_year.py  test_copyright_year_line.py
tests/diagnostics/: __init__.py  test_clock.py
tests/text/: __init__.py  test_string_builder.py
