[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asd-ste100-issue9-training-data"
version = "0.1.0"
description = "Make training data from the ASD-STE100 Issue 9 word list."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = [
    "LICENSE",
]
authors = [
    {name = "Ronald Rink"},
]
maintainers = [
    { name = "d-fens GmbH" },
]

keywords = [
    "requirements",
    "technical writing",
    "technical-writing",
    "text processing",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "biz-dfch-ste100vocab>=0.5.0",
    "dacite>=1.9.2",
    "instructor>=1.15.0",
    "litellm>=1.86.2",
    "pydantic>=2.10.0",
    "pydantic-ai>=1.104.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=14.0.0",
    "spacy>=3.8.14",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "typer>=0.26.3",
]

# Install with `uv`:
# uv sync --extra dev --extra build --python 3.13
# Examine if you can operate `unittest` correctly:
# uv run python -m unittest discover -v -s tests -t . -p "test_*.py"
# Examine if you can operate `pylint` correctly:
# uv run pylint $(git ls-files '*.py')
[project.optional-dependencies]
test = [
    "bandit>=1.7.9",
    "coverage",
    "mypy>=1.11.0",
    "parameterized>=0.9.0",
    "pip-audit>=2.7.3",
    "pylint>=4.0.0",
]

dev = [
    "asd-ste100-issue9-training-data[test]",
    "black",
    "flake8>=7.3.0",
    "pip>=26.1.1",
]

interactive = [
    "ipykernel",
]

build = [
    "pyinstaller>=6.20.0",
]

[project.urls]
Homepage = "https://github.com/dfensgmbh/AsdSte100Issue9TrainingData"
Issues = "https://github.com/dfensgmbh/AsdSte100Issue9TrainingData/issues"

[tool.uv]
package = true

[project.scripts]
create = "biz.dfch.training_data.cli:app"

[tool.black]
line-length = 80
# Match the project's supported Python range (requires-python = ">=3.11").
# Without this, black may default to a target newer than the runtime can
# parse, causing the AST safety check to fail.
target-version = ["py311", "py312", "py313"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[[tool.mypy.overrides]]
module = ["parameterized.*"]
ignore_missing_imports = true

[tool.pylint.main]
# Pass CI as long as the overall score is at least this high. Style /
# convention findings still appear in the log but do not fail the build.
fail-under = 9.0

[tool.pylint."messages control"]
disable = [
    # R0801 - Typer command modules share intentional boilerplate
    # (app = typer.Typer(...), the overwrite-confirm block, etc.).
    "duplicate-code",
    # R1711 - explicit `return None` in Typer commands documents that
    # the command produces no value; we keep it on purpose.
    "useless-return",
    # R0903 - small data-container classes are fine.
    "too-few-public-methods",
]

[tool.pylint.design]
# Generous limits: this project has agent / command modules that are
# naturally a bit long, and test classes with many test_* methods.
max-locals = 25
max-branches = 20
max-statements = 80
max-public-methods = 100
max-args = 10
max-positional-arguments = 10
